WEB-1365 - Fixed white space around empty large hero image.

--- a/sites/all/themes/calacademy_zen/sass/calacademy/hero-system.scss
+++ b/sites/all/themes/calacademy_zen/sass/calacademy/hero-system.scss
@@ -1,7 +1,9 @@
 @import "global-variables";
 
 .pane-hero-media-standard-hero-image-pane,
+.pane-hero-media-revision-standard-hero-image-pane,
 .pane-hero-media-large-hero-image-pane,
+.pane-hero-media-revision-large-hero-image-pane,
 .pane-slideshows-large-hero-image-pane,
 .pane-slideshows-standard-hero-image-pane {
 	.views-row {
@@ -21,7 +23,8 @@
 	}
 }
 
-.pane-hero-media-large-hero-image-pane {
+.pane-hero-media-large-hero-image-pane,
+.pane-hero-media-revision-large-hero-image-pane {
 	.views-field {
 		margin: 0 !important;
 	}
